Fix artwork button aligntment

--- a/assets/scss/components/content/_archive-artworks.scss
+++ b/assets/scss/components/content/_archive-artworks.scss
@@ -208,6 +208,7 @@ body.post-type-archive-artwork {
 						cursor: pointer;
 						text-transform: none;
 						text-decoration: underline;
+						text-align: left;
 					
 						&:hover {
 							text-decoration: none;
